
Version 1.0.3
 * Added feature: directive mogilefs_class and ability to specify class of a resource
 * Change: support for HEAD method
 * Change: compatiblity with nginx API 0.8.11 and greater
 * Change: size parameter is now send with create_close command

Version 1.0.2
 * Added feature: directive mogilefs_methods and support for PUT and DELETE methods
 * Added feature: dynamic evaluation of tracker name
 * Added feature: ability to pass noverify parameter to tracker